# JazzyAgent

./: .gitignore  README.md  pyproject.toml
src/jazzy/: __init__.py  cli.py  config.py
src/jazzy/agent/: context.py  loop.py  memory.py  models.py  postprocess.py  prompts.py  providers.py
src/jazzy/analyzers/: backend.py  frontend.py  node.py  python.py  security.py
src/jazzy/detectors/: commands.py  languages.py  package_manager.py  project.py
src/jazzy/reports/: final_report.py  findings.py
src/jazzy/runners/: build.py  checks.py  tests.py
src/jazzy/safety/: git_safety.py  ignore.py  permissions.py  workspace.py
src/jazzy/tools/: apply_patch.py  read_file.py  search.py  shell.py  write_file.py
tests/: test_agent_loop.py  test_commands.py  test_context.py  test_detect_project.py  test_patch.py  test_postprocess.py  test_prompts.py  test_safety.py
